# PyConChina2024

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh  update.sh
.github/workflows/: deploy.yaml
base/: models.py
base/migrations/: 0001_initial.py  0002_remove_navigationsettings_github_url_and_more.py
base/templatetags/: navigation_tags.py  site.py
home/: models.py
home/migrations/: 0003_homepage_about_homepage_date_homepage_venue.py  0004_relatedlink.py  0005_remove_homepage_about_homepage_body.py  0006_articlepage.py
home/static/css/: home.css
home/templates/home/: article_page.html  home_page.html
pycon/: urls.py  wsgi.py
pycon/settings/: base.py  dev.py
pycon/static/css/: pycon.css
pycon/static/js/: pycon.js
pycon/templates/: 404.html  base.html
pycon/templates/components/: footer.html  navbar.html
schedule/: models.py
schedule/migrations/: 0001_initial.py  0002_room_host.py
schedule/static/css/: schedule.css
schedule/templates/schedule/: schedule_list_page.html
schedule/templates/snippets/: schedule.html  schedule_item.html
staff/: models.py
staff/migrations/: 0001_initial.py  0002_alter_staff_options.py  0003_remove_staff_email_staff_bio.py
staff/templates/staff/: staff_page.html
supporter/: blocks.py  models.py
supporter/migrations/: 0001_initial.py  0002_alter_supporterpage_body_supporter_supportertier.py
talk/: models.py
talk/migrations/: 0001_initial.py  0002_alter_author_options_remove_author_page_and_more.py  0003_alter_talkpage_type.py  0004_alter_talkpage_type.py
(+6 files in other folders)
