[project]
name = "PyConChina"
version = "2024.0"
description = "PyCon China 2024 大会官网"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "wagtail>=6.2.2",
    "gunicorn>=23.0.0",
    "wagtail-bakery>=0.8.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
migrate = "python manage.py migrate --noinput"
dev = "python manage.py runserver"
start = "gunicorn pycon.wsgi:application"
